ola-parser/src/testdata/syntaxTests/types/mapping/error_parameter.sol
error E(mapping(u256 => u256));
// ----
// TypeError 3448: (9-31): Type containing a (nested) mapping is not allowed as error parameter type.
